rough but functional war updates page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="supply">Supply</string>
     <string name="mission">Mission</string>
     <string name="search_for_a_weapon">Search for a weapon</string>
+    <string name="special">Special</string>
 </resources>
