--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,11 @@
     <string name="defensive">Defensive</string>
     <string name="supply">Supply</string>
     <string name="mission">Mission</string>
-    <string name="search_for_a_weapon">Search for a weapon</string>
+    <string name="search_for_a_weapon">Search stratagems…</string>
     <string name="special">Special</string>
+    <string name="search">Search</string>
+    <string name="planet">Planet</string>
+    <string name="faction">Faction</string>
+    <string name="players">Players</string>
+    <string name="percent">Percent</string>
 </resources>
