Third activity UI complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="faction">Faction</string>
     <string name="players">Players</string>
     <string name="percent">Percent</string>
+    <string name="liberation">Liberation</string>
 </resources>
