--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,21 +5,21 @@
     <string name="weapons">Weapons</string>
     <string name="stats">Stats</string>
     <string name="war">War</string>
-    <string name="id">ID:</string>
-    <string name="wins">Missions Won:</string>
-    <string name="lost">Missions Lost:</string>
-    <string name="time">Mission Time:</string>
-    <string name="bugs">Bugs Killed:</string>
-    <string name="automations">Automations Killed:</string>
-    <string name="illuminates">Illuminates Killed:</string>
-    <string name="fired">Bullets Fired:</string>
-    <string name="hits">Bullets Hit:</string>
-    <string name="playtime">Time Played:</string>
-    <string name="deaths">Deaths:</string>
-    <string name="revives">Revives:</string>
-    <string name="friendly_kills">Friendly Kills:</string>
-    <string name="success_rate">Mission Success Rate:</string>
-    <string name="accuracy">Accuracy:</string>
+
+    <string name="wins">Missions Won</string>
+    <string name="plays">Missions Played</string>
+    <string name="time">Mission Time</string>
+    <string name="bugs">Bugs Killed</string>
+    <string name="automations">Automations Killed</string>
+    <string name="illuminates">Illuminates Killed</string>
+    <string name="fired">Bullets Fired</string>
+    <string name="hits">Bullets Hit</string>
+    <string name="playtime">Time Played</string>
+    <string name="deaths">Deaths</string>
+    <string name="revives">Revives</string>
+    <string name="friendly_kills">Friendly Kills</string>
+    <string name="success_rate">Mission Success Rate</string>
+    <string name="accuracy">Accuracy</string>
     <string name="offensive">Offensive</string>
     <string name="defensive">Defensive</string>
     <string name="supply">Supply</string>
@@ -33,5 +33,10 @@
     <string name="percent">Percent</string>
     <string name="liberation">Liberation</string>
     <string name="galactic_war_status">Galactic War Status</string>
+    <string name="player_stats">Player Stats</string>
     <string name="placeholder">placeholder</string>
+    <string name="placeholder2">0</string>
+    <string name="cancel">Cancel</string>
+    <string name="Save">Save</string>
+    <string name="update">Update</string>
 </resources>
