Added a way to reset stats page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="cancel">Cancel</string>
     <string name="Save">Save</string>
     <string name="update">Update</string>
+    <string name="reset">Reset</string>
 </resources>
